2007-06-25  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/unistd.h (getcwd): New file.

	* lib/unistd_.h (if !): New file.

	* lib/Makefile.am: New file.

	* lib/gettext.h: New file.

	* lib/getopt_int.h: New file.

	* lib/getopt_.h: New file.

	* lib/getopt.c: New file.

	* lib/getopt1.c: New file.

	* lib/dummy.c: New file.

2007-03-31  Peter Breitenlohner <peb@mppmu.mpg.de>

	* src/resource.c (resource_buildDatabase): avoid segfaults when
	  reading ~/.gv as produced by State -> Setup Options -> Save

2007-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/gv.texi: Fix GVERSION.

2006-07-07  Jose E. Marchesi  <jemarch@gnu.org>

	* src/ps.c: `gettext' function renamed to `ps_gettext' to avoid
	  collision with the `gettext' builtin function.

2006-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* src/gv_signal.c (signal_setSignalHandlers): Ignore the SIGINT
	signal.

2005-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am ($(srcdir)/gv_intern_res_unix.dat): Remove
	quotes from the gs command lines in order to accomodate to the
	0000-unchequed Debian patch for quoting filenames.

2005-03-31  Jose E. Marchesi  <jemarch@dataware.es>

	* src/Ghostview.c (StartInterpreter): Added the '-2x2' argument to
	gs in order to get the correct orientation for landscape
	files. Patch by John Bowman.

	* configure.ac: Enable the scrollbar code. Solves bug #11091.

	* src/main.c (main): use getopt_long_only in order to support old
	command line arguments style.

	* doc/gv.texi (Resource files): Typo fixed
	(Displaying new versions of a document): Reference to VMS removed.
	(How can I make even more room for the image?): Subst -spartan by --spartan

	* configure.ac: The signal handler is now enabled by default,
	following the commentary on configure.ac
	Typo: enable-signal-handle -> enable-signal-handler

	* src/ps.c: Strip off the external reference to 'pdf_delaysafer_hack'
	Revert the delaysafer hack

	* src/misc.c (misc_changeFile): Strip off directories from the