@@ -594,7 +594,7 @@ int main(argc, argv)
      XrmDatabase db;
      INFMESSAGE(getting resources)
      db = resource_buildDatabase(gv_display,gv_class,gv_name,&argc,argv);
-     XrmCombineDatabase(db,&gv_database,False);
+     XrmCombineDatabase(db,&gv_database,True);
    }
 
 /*### initializing widget set and creating application shell #########################*/
@@ -1033,8 +1033,7 @@ int main(argc, argv)
             XtSetArg(args[n], XtNinterpreter,gv_gs_interpreter);	n++;
             b = gv_gs_safer ? True : False;
             XtSetArg(args[n], XtNsafer,b);                              n++;
-            b = gv_gs_quiet ? True : False;
-            XtSetArg(args[n], XtNquiet,b);                              n++;
+            XtSetArg(args[n], XtNquiet, True);                          n++;
             b = app_res.use_bpixmap ? True : False;
             XtSetArg(args[n], XtNuseBackingPixmap,b);                   n++;
             XtSetArg(args[n], XtNarguments,gv_gs_arguments);            n++;
